unpackaged/main/default/objects/Activity/fields/BooxiId__c.field-meta.xml
<CustomField>
    <fullName>BooxiId__c</fullName>
    <label>Booxi Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>