unpackaged/main/default/objects/Activity/fields/Call_GUID__c.field-meta.xml
<CustomField>
    <fullName>Call_GUID__c</fullName>
    <description>Unique call identifier</description>
    <label>Call-GUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>