unpackaged/main/default/objects/Activity/fields/Call_Is_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Call_Is_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that call was recorded</description>
    <label>Call Is Recorded</label>
    <type>Checkbox</type>
</CustomField>