unpackaged/main/default/objects/Activity/fields/Call_recording_url__c.field-meta.xml
<CustomField>
    <fullName>Call_recording_url__c</fullName>
    <description>Url to see interaction in Genesys</description>
    <formula>HYPERLINK(&quot;https://apps.mypurecloud.de/directory/#/engage/admin/interactions/&quot;&amp; Call_GUID__c,&#39;CALL RECORDING&#39;)</formula>
    <label>Call recording url</label>
    <type>Text</type>
</CustomField>