unpackaged/main/default/objects/Activity/fields/Called_number__c.field-meta.xml
<CustomField>
    <fullName>Called_number__c</fullName>
    <description>Number called by the client (Black number), customer phone number for inbound calls</description>
    <label>Called Number</label>
    <type>Phone</type>
</CustomField>