unpackaged/main/default/objects/Activity/fields/CancelledDateTime__c.field-meta.xml
<CustomField>
    <fullName>CancelledDateTime__c</fullName>
    <label>Cancelled Date/Time</label>
    <type>DateTime</type>
</CustomField>