unpackaged/main/default/objects/Activity/fields/Client_Booking__c.field-meta.xml
<CustomField>
    <fullName>Client_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Booking</label>
    <referenceTo>ClientBooking__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>