unpackaged/main/default/objects/Activity/fields/ClientList__c.field-meta.xml
<CustomField>
    <fullName>ClientList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client List</label>
    <referenceTo>ClientList__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>