unpackaged/main/default/objects/Activity/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Phone number of customer for inbound calls, number used for outbound calls</description>
    <label>Caller Number</label>
    <type>Phone</type>
</CustomField>