unpackaged/main/default/objects/Activity/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <description>Customer phone number (filled by Flow.Automation_Task)</description>
    <label>Customer Phone Number</label>
    <type>Phone</type>
</CustomField>