unpackaged/main/default/objects/Activity/fields/eMailDirection__c.field-meta.xml
<CustomField>
    <fullName>eMailDirection__c</fullName>
    <label>eMail Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>