unpackaged/main/default/objects/Activity/fields/EN_Outreach_Reason__c.field-meta.xml
<CustomField>
    <fullName>EN_Outreach_Reason__c</fullName>
    <label>EN Outreach Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>