unpackaged/main/default/objects/Activity/fields/EventAttendedDate__c.field-meta.xml
<CustomField>
    <fullName>EventAttendedDate__c</fullName>
    <label>Event Attended Date</label>
    <type>Date</type>
</CustomField>