unpackaged/main/default/objects/Activity/fields/EventClientAttended__c.field-meta.xml
<CustomField>
    <fullName>EventClientAttended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Client Attended</label>
    <type>Checkbox</type>
</CustomField>