unpackaged/main/default/objects/Activity/fields/EventClientInvited__c.field-meta.xml
<CustomField>
    <fullName>EventClientInvited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Client Invited</label>
    <type>Checkbox</type>
</CustomField>