unpackaged/main/default/objects/Activity/fields/EventInvitedDate__c.field-meta.xml
<CustomField>
    <fullName>EventInvitedDate__c</fullName>
    <label>Event Invited Date</label>
    <type>Date</type>
</CustomField>