unpackaged/main/default/objects/Activity/fields/External_Transfert__c.field-meta.xml
<CustomField>
    <fullName>External_Transfert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the call was transfered to external party</description>
    <label>External Transfert</label>
    <type>Checkbox</type>
</CustomField>