unpackaged/main/default/objects/Activity/fields/FX_RecordTypeName_c__c.field-meta.xml
<CustomField>
    <fullName>FX_RecordTypeName_c__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX_RecordTypeName__c</label>
    <type>Text</type>
</CustomField>