unpackaged/main/default/objects/Activity/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <referenceTo>Gift__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>