unpackaged/main/default/objects/Activity/fields/GiftedDate__c.field-meta.xml
<CustomField>
    <fullName>GiftedDate__c</fullName>
    <label>Gifted Date</label>
    <type>Date</type>
</CustomField>