unpackaged/main/default/objects/Activity/fields/HQTask__c.field-meta.xml
<CustomField>
    <fullName>HQTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Task</label>
    <type>Checkbox</type>
</CustomField>