unpackaged/main/default/objects/Activity/fields/Hub_Handle__c.field-meta.xml
<CustomField>
    <fullName>Hub_Handle__c</fullName>
    <label>Hub Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>