unpackaged/main/default/objects/Activity/fields/Hub_Origin__c.field-meta.xml
<CustomField>
    <fullName>Hub_Origin__c</fullName>
    <label>Hub Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>