unpackaged/main/default/objects/Activity/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <description>Field used by BI</description>
    <formula>IF(

AND(

!ISBLANK(CallObject),

text(CallType)=&quot;Outbound&quot;

),

&quot;Outbound Call&quot;,

&quot;&quot;)

+

IF(

AND(

!ISBLANK(CallObject),

text(CallType)=&quot;Inbound&quot;

),

&quot;Inbound Call&quot;,

&quot;&quot;)

+

IF(

AND(

text(eMailDirection__c)=&quot;Inbound&quot;,

IsVoicemail__c = FALSE ,

IsMaison__c = FALSE ),

&quot;Inbound Email Client&quot;,

&quot;&quot;)

+

IF(

AND(

text(eMailDirection__c)=&quot;Inbound&quot;,

IsVoicemail__c,

!IsMaison__c),

&quot;Inbound Call Voicemail&quot;,

&quot;&quot;)

+

IF(

AND(

text(eMailDirection__c)=&quot;Inbound&quot;,

IsMaison__c),

&quot;Inbound Email Maison&quot;,

&quot;&quot;)

+

IF(

AND(

isAutoResponse__c = FALSE ,

text(eMailDirection__c)=&quot;Outbound&quot;,

IsMaison__c = FALSE),

&quot;Outbound Email Client&quot;,

&quot;&quot;)

+

IF(

AND(

!isAutoResponse__c,

text(eMailDirection__c)=&quot;Outbound&quot;,

IsMaison__c),

&quot;Outbound Email Maison&quot;,

&quot;&quot;)

+IF(

AND(

isAutoResponse__c,

text(eMailDirection__c)=&quot;Outbound&quot;),

&quot;Outbound Email AutoResponse&quot;,

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction</label>
    <type>Text</type>
</CustomField>