unpackaged/main/default/objects/Activity/fields/isAutoResponse__c.field-meta.xml
<CustomField>
    <fullName>isAutoResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoResponse</label>
    <type>Checkbox</type>
</CustomField>