unpackaged/main/default/objects/Activity/fields/IsMaison__c.field-meta.xml
<CustomField>
    <fullName>IsMaison__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email message send or received by SME or for Admin Cases
--&gt; update via Flow</description>
    <label>IsMaison</label>
    <type>Checkbox</type>
</CustomField>