unpackaged/main/default/objects/Activity/fields/IsPinned__c.field-meta.xml
<CustomField>
    <fullName>IsPinned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pinned</label>
    <type>Checkbox</type>
</CustomField>