unpackaged/main/default/objects/Activity/fields/IsRepair__c.field-meta.xml
<CustomField>
    <fullName>IsRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repair</label>
    <type>Checkbox</type>
</CustomField>