unpackaged/main/default/objects/Activity/fields/IsVoicemail__c.field-meta.xml
<CustomField>
    <fullName>IsVoicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the case associated to the task is created from CTI</description>
    <label>IsVoicemail</label>
    <type>Checkbox</type>
</CustomField>