unpackaged/main/default/objects/Activity/fields/maison_external_id__c.field-meta.xml
<CustomField>
    <fullName>maison_external_id__c</fullName>
    <externalId>true</externalId>
    <label>Maison External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>