unpackaged/main/default/objects/Activity/fields/Modified_By_StaffId__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_StaffId__c</fullName>
    <label>Modified By StaffId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>