unpackaged/main/default/objects/Activity/fields/Outreach_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Reason__c</fullName>
    <label>Outreach Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>