unpackaged/main/default/objects/Activity/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <label>Outreach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
            <value>
                <fullName>Wechat</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>ShareProduct</fullName>
            </value>
            <value>
                <fullName>Wishlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>