unpackaged/main/default/objects/Activity/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Name of the Queue call was answered</description>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>