unpackaged/main/default/objects/Activity/fields/Related_Products__c.field-meta.xml
<CustomField>
    <fullName>Related_Products__c</fullName>
    <label>Related Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>