unpackaged/main/default/objects/Activity/fields/Related_Products_Details__c.field-meta.xml
<CustomField>
    <fullName>Related_Products_Details__c</fullName>
    <label>Related Products Details</label>
    <type>TextArea</type>
</CustomField>