unpackaged/main/default/objects/Activity/fields/Related_Products_Num__c.field-meta.xml
<CustomField>
    <fullName>Related_Products_Num__c</fullName>
    <label>Related Products Num</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>