unpackaged/main/default/objects/Activity/fields/RelatedProduct__c.field-meta.xml
<CustomField>
    <fullName>RelatedProduct__c</fullName>
    <label>Related Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>