unpackaged/main/default/objects/Activity/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <label>Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>86400</fullName>
                <label>1 day before</label>
            </value>
            <value>
                <fullName>172800</fullName>
                <label>2 days before</label>
            </value>
            <value>
                <fullName>604800</fullName>
                <label>1 week before</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>