unpackaged/main/default/objects/Activity/fields/ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>ReminderDate__c</fullName>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>