unpackaged/main/default/objects/Activity/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>Name of the phone line called by customer</description>
    <label>Service Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>