unpackaged/main/default/objects/Activity/fields/SharedProduct__c.field-meta.xml
<CustomField>
    <fullName>SharedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Product</label>
    <referenceTo>Catalog_Product__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>