unpackaged/main/default/objects/Activity/fields/Store_Status__c.field-meta.xml
<CustomField>
    <fullName>Store_Status__c</fullName>
    <description>Status of the store at the time of the call (Open, Closed)</description>
    <label>Store Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>