unpackaged/main/default/objects/Activity/fields/Task_details__c.field-meta.xml
<CustomField>
    <fullName>Task_details__c</fullName>
    <label>Task details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>