unpackaged/main/default/objects/Activity/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Appt Booking outreach reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>