unpackaged/main/default/objects/Activity/fields/TECH_Market_zone__c.field-meta.xml
<CustomField>
    <fullName>TECH_Market_zone__c</fullName>
    <formula>if(
CONTAINS(Queue__c,&quot;UAE&quot;),
&quot;UAE&quot;,
 
   if(
   CONTAINS(Queue__c,&quot;MX&quot;),
   &quot;MX&quot;,
   if(
   CONTAINS(Queue__c,&quot;CA&quot;),
   &quot;CA&quot;,
   &quot;&quot; 
   )
   
   )
   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Market zone</label>
    <type>Text</type>
</CustomField>