unpackaged/main/default/objects/Activity/fields/TemplateType__c.field-meta.xml
<CustomField>
    <fullName>TemplateType__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Perso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>