unpackaged/main/default/objects/Activity/fields/TimeslotIds__c.field-meta.xml
<CustomField>
    <fullName>TimeslotIds__c</fullName>
    <label>TimeslotIds</label>
    <type>TextArea</type>
</CustomField>